--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,5 +9,95 @@ footer{
     bottom: 0;
     z-index: 10000;
     overflow: hidden;
-    background: #333;
+    background: #666;
+    ul{
+        width: 100%;
+        height: 100%;
+        @include flexbox();
+        flex-direction: row;
+        li{
+            height: 100%;
+        }
+        .one{
+            width: .52rem;
+            img{
+                margin-left: 0.05rem;
+                margin-top: 0.05rem;
+            }
+        }
+        .two{
+            width: 1.6rem;
+            p{
+               white-space: nowrap;
+                color: white;
+            }
+        }
+        .three{
+            @include flex();
+            button{
+                position: absolute;
+                right: 0.15rem;
+                top: .1rem;
+                background: red;
+                border-radius: 0.04rem;
+                width: .78rem;
+                height: .31rem;
+                color: white;
+            }
+        }
+    }    
+}
+.bottom{
+    width: 100%;
+    height: 4.43rem;
+    @include flexbox();
+    flex-direction: column;
+    .hottitle{
+        width: 100%;
+        height: .42rem;
+        background: #f5f5f5;
+        text-align: center;
+        line-height: .42rem;
+        font-weight: 900;
+    }
+    .brands{
+        width: 100%;
+        height: 2.5rem;
+        background: #fff;
+        ul{
+            width: 100%;
+            height: 100%;
+            @include flexbox();
+            flex-direction: row;
+            flex-wrap: wrap;
+            li{
+                width: 33.33333%;
+                height: 50%;
+            }
+        }
+    }
+    .foursigns{
+        width: 100%;
+        height: .64rem;
+        background: #E4E4E4;
+        ul{
+            width: 100%;
+            height: 100%;
+            @include flexbox();
+            flex-direction: row;
+            li{
+                line-height: .7rem;
+                @include flex();
+            }
+        }
+    }
+    .numbers{
+        width: 100%;
+        height: .88rem;
+        background: #c6204d;
+        color: #fff;
+        text-align: center;
+        line-height: .88rem;
+        font-size: .2rem;
+    }
 }
